# delux-m700-linux

./: .gitignore  LICENSE  pyproject.toml  readme.md
captures/: dpi.pcapng  polling.pcapng  rgb.pcapng
scripts/: find_mouse.py
src/delux_m700/: device.py
src/delux_m700.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/: inspect_interfaces.py  open_device.py  test_connection.py
